...
    var animator = SalonViewAnimator()
    
    override func viewDidLoad()
    {
        super.viewDidLoad()
        
        segmentedControl.items = ["Salon", "Area", "Category"]
        segmentedControl.font = UIFont(name: "MuseoSans-700", size: 14)
        segmentedControl.addTarget(self, action: #selector(SearchViewController.segmentValueChanged(_:)), forControlEvents: .ValueChanged)
        segmentedControl.selectedIndex = 0
        
        
        searchField.becomeFirstResponder()
...
    override func viewWillAppear(animated: Bool)
    {
        let navBarFrame = self.navigationController?.navigationBar.frame
        
        self.searchField.frame.size = CGSizeMake(navBarFrame!.size.width-40, 30)
        self.searchField.center     = CGPointMake(navBarFrame!.width/2, navBarFrame!.height/2)
        self.searchField.attributedPlaceholder = NSAttributedString(string: "Search", attributes: [NSForegroundColorAttributeName : UIColor(white: 1, alpha: 0.7)])
        self.searchField.delegate   = self
        
        self.navigationController?.navigationBar.addSubview(self.searchField)
        
        self.navigationController?.navigationBar.hidden = false
        
...
