...
//        
//        let date = NSDate()
//        
//        let notification = UILocalNotification()
//        notification.fireDate = date + 10.seconds.timeInterval
//        notification.alertBody = "You have an appointment tomorrow with Mairy in Bader Salon at 8:00 PM)"
//        notification.userInfo = ["salonName" : "Bader Salon",
//                                 "salonAddress" : "Mishref block 5 whatever",
//                                 "salonImageUrl" : "http://beautyfinders.com/media/salon/image.jpeg",
//                                 "subcategoryName" : "Hair Wash",
//                                 "subcategoryPrice" : 20.0,
//                                 "beauticianName" : "Mairy",
//                                 "beauticianImageUrl" : "http://beautyfinders.com/media/Beautician/img1456063529780_1_icsrXSC.jpg",
...
